force-app/main/default/objects/Location/fields/MSN_LN_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>MSN_LN_Store_Id__c</fullName>
    <description>Used as a unique key from LN to identify the &quot;Van&quot; location.</description>
    <label>LN Store Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>