force-app/main/default/objects/Location/fields/WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>WarehouseID__c</fullName>
    <label>WarehouseID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>